@@ -1,5 +1,14 @@
 2017-03-17  Bruno Haible  <bruno@clisp.org>
 
+	Update to the newest gnulib.
+	Ran "make -f Makefile.devel build-aux-update gnulib-imported
+	build-prerequisites".
+	* gllib/*: Update from gnulib.
+	* glm4/*: Likewise.
+	* aclocal.m4, src/configure: Regenerated.
+
+2017-03-17  Bruno Haible  <bruno@clisp.org>
+
 	Fix build failures with --with-debug on NetBSD.
 	* unix.d: Include <sys/ioctl.h> always. Needed to get ioctl() declared.
 	* foreign.d (FOREIGN-POINTER-INFO): Cast dli.dli_saddr, possibly a
